# natural-cycles-assignment

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  simple_analysis.py
docs/: mkdocs.yml
docs/docs/: index.md
natural_cycles_assignment/: __init__.py  dataset.py  features.py  import_data.py  model.py  plots.py  plotting.py  pregnancy_analysis.py  question_1_pregnancy_chance_13_cycles.py  question_2_usual_conception_time.py  question_3_factors_impacting_conception_time.py  question_4_ML_approach_factors_impacting_conception_time.py  question_4_ML_classification_approach_factors_impacting_conception_time.py  question_4_ML_regression_approach_factors_impacting_conception_time.py  question_5_LM_approach_factors_impacting_conception_time copy.py  question_5_classification_approach_factors_impacting_conception_time.py  question_6_LinearModel_approach_factors_impacting_conception_time copy.py  utils.py
natural_cycles_assignment/modeling/: predict.py  train.py
notebooks/: Data Exploration.ipynb
reports/: Natural Cycles - Assignment Report - Jeroen Buil.pptx
