[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "natural_cycles_assignment"
version = "0.0.1"
description = "Assignment for the role of Senior Data Scientist at Natural Cycles"
authors = [
  { name = "Jeroen Buil" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["natural_cycles_assignment"]
include = ["pyproject.toml", "natural_cycles_assignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["natural_cycles_assignment"]
force-sort-within-sections = true

