[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "natural_cycles_assignment"
version = "1.0.0"
description = "Assignment for the role of Senior Data Scientist at Natural Cycles"
authors = [
  { name = "Jeroen Buil" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.12.0"

dependencies = [
    "numpy==2.3.0",
    "pandas==2.3.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "xgboost==3.0.2",
    "imbalanced-learn==0.13.0",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "ipython==9.3.0",
    "ipykernel==6.29.5",
    "jupyterlab==4.4.3",
    "loguru==0.7.3",
    "mkdocs==1.6.1",
    "notebook==7.4.3",
    "python-dotenv==1.1.0",
    "tqdm==4.67.1",
    "typer==0.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.13",
]

[tool.ruff]
line-length = 99
src = ["natural_cycles_assignment"]
include = ["pyproject.toml", "natural_cycles_assignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["natural_cycles_assignment"]
force-sort-within-sections = true

